templates/default-deny-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector: {}  # Cela cible tous les pods du namespace
  ingress: []  # Aucune règle d'entrées autorisées
  egress: []  # Aucune règle de sorties autorisées
